--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -27,14 +27,14 @@
     {% if page.excerpt %}
     <meta itemprop="name" content="{% if page.title %}{{ page.title }}{% endif %}">
     <meta name="description" content="{{ page.excerpt| smartify }}" />
-    <meta itemprop="description" content="{{ page.excerpt| smartify }}">
+    <meta itemprop="description" content="{{ page.excerpt| markdownify }}">
     <meta property="og:description" content="{{ page.excerpt| smartify }}" />
     <meta itemprop="image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
 	<meta name="twitter:title" content="{{ page.title }}">
-	<meta name="twitter:description" content="Descripcion que no supere los 200 caracteres">
+	<meta name="twitter:description" content="{{ page.excerpt|  normalize_whitespace }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
 	<meta name="twitter:image:src" content="{{ site.baseurl }}{{ post.url }}">
