--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -26,15 +26,15 @@
 		
     {% if page.excerpt %}
     <meta itemprop="name" content="{% if page.title %}{{ page.title }}{% endif %}">
-    <meta name="description" content="{{ page.excerpt| normalize_whitespace }} | strip_html" />
-    <meta itemprop="description" content="{{ page.excerpt| normalize_whitespace }} | strip_html">
-    <meta property="og:description" content="{{ page.excerpt| normalize_whitespace }} | strip_html" />
+    <meta name="description" content="{{ page.excerpt| normalize_whitespace| strip_html }}" />
+    <meta itemprop="description" content="{{ page.excerpt| normalize_whitespace | strip_html }}">
+    <meta property="og:description" content="{{ page.excerpt| normalize_whitespace }}" />
     <meta itemprop="image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
 	<meta name="twitter:title" content="{{ page.title }}">
-	<meta name="twitter:description" content="{{ page.excerpt|  normalize_whitespace }}| strip_html">
+	<meta name="twitter:description" content="{{ page.excerpt|  normalize_whitespace| strip_html }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
 	<meta name="twitter:image:src" content="{{ site.baseurl }}{{ post.url }}">
@@ -43,7 +43,7 @@
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content=" {{ site.baseurl }}" />
 	<meta property="og:image" content=" http://example.com/image.jpg" />
-	<meta property="og:description" content="{{ page.excerpt| strip_html }}" />
+	<meta property="og:description" content="{{ page.excerpt|  normalize_whitespace }}" />
 	<meta property="og:site_name" content="{{ site.baseurl }}, i.e. Moz" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
