--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -37,15 +37,15 @@
 	<meta name="twitter:description" content="{{ page.excerpt|  normalize_whitespace | strip_html }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
-	<meta name="twitter:image:src" content="{{ site.baseurl }}{{ post.url }}">
+	<meta name="twitter:image:src" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ page.title }}" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content=" {{ site.baseurl }}" />
-	<meta property="og:image" content=" http://example.com/image.jpg" />
+	<meta property="og:image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" />
 	<meta property="og:description" content="{{ page.excerpt|  normalize_whitespace | strip_html }}" />
-	<meta property="og:site_name" content="{{ site.baseurl }}, i.e. Moz" />
-	<meta property="article:published_time" content="{{ site.date }}" />
+	<meta property="og:site_name" content="{{ site.baseurl }}" />
+	<meta property="article:published_time" content="{{ page.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
 	<meta property="article:section" content="Post" />
 	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %}" />
@@ -60,17 +60,17 @@
 	<meta name="twitter:card" content="{{ site.baseurl }}/hipertextos/brand/cover.png">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
 	<meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}">
-	<meta name="twitter:description" content="Descripcion que no supere los 200 caracteres">
+	<meta name="twitter:description" content="{{ site.description }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
-	<meta name="twitter:image:src" content="{{ site.baseurl }}">
+	<meta name="twitter:image:src" content="http://www.videosmanguis.net/">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
-	<meta property="og:url" content=" {{ site.baseurl }}" />
+	<meta property="og:url" content="http://www.videosmanguis.net/" />
 	<meta property="og:image" content=" {{ site.baseurl }}/hipertextos/brand/cover.png" />
 	<meta property="og:description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
-	<meta property="og:site_name" content="{{ site.baseurl }}, i.e. Moz" />
+	<meta property="og:site_name" content="http://www.videosmanguis.net/" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
 	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} Videos Manguis, humor, videos graciosos, videos divertidos, notícias, series, cine, películas, Star Wars, Stranger Things, Juego de Tronos, review, youtuber, youtube, vacas manguis" />
