--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
 </script>
 {% endif %}
 
-{% if page.posting %}
+{% if page.comments %}
 
 {% assign wordcount = include.content | number_of_words %}
 
