--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,7 +11,7 @@
 	{% endif %}
 		
 	<meta name="distribution" content="global"/>
-	<meta name="keywords" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} Videos Manguis, humor, videos graciosos, videos divertidos, notícias, series, cine, películas, Star Wars, Stranger Things, Juego de Tronos, review, youtuber, youtube, vacas manguis" />
+	<meta name="keywords" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	<meta name="description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
 	<meta name="robots" content="index, follow" />
     <meta name="author" content="Videos Manguis Producciones" />
@@ -73,6 +73,6 @@
 	<meta property="og:site_name" content="http://www.videosmanguis.net/" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
-	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} Videos Manguis, humor, videos graciosos, videos divertidos, notícias, series, cine, películas, Star Wars, Stranger Things, Juego de Tronos, review, youtuber, youtube, vacas manguis" />
+	<meta property="article:tag" content="humor, videos divertidos, series, cine, películas, Star Wars, Stranger Things, Juego de Tronos, review, youtuber" />
 	<meta property="fb:admins" content="Videos-Manguis-232512496769704 " />
     {% endif %}
