--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -29,15 +29,15 @@
     <meta name="description" content="{{ page.excerpt| normalize_whitespace | strip_html }}" />
     <meta itemprop="description" content="{{ page.excerpt| normalize_whitespace | strip_html }}">
     <meta property="og:description" content="{{ page.excerpt| normalize_whitespace | strip_html }}" />
-    <meta itemprop="image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
+    <meta itemprop="image" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg">
 	<!-- Twitter Card data -->
-	<meta name="twitter:card" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
+	<meta name="twitter:card" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
 	<meta name="twitter:title" content="{{ page.title }}">
 	<meta name="twitter:description" content="{{ page.excerpt|  normalize_whitespace | strip_html }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
-	<meta name="twitter:image:src" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
+	<meta name="twitter:image:src" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ page.title }}" />
 	<meta property="og:type" content="article" />
