--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,8 +11,8 @@
 	<meta name="keywords" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	<meta name="description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
 	<meta name="robots" content="index, follow" />
-    <meta name="author" content="Videos Manguis Producciones" />
-    <meta name='designer' content='Isard Miralles'>
+    <meta name="author" href="https://plus.google.com/{{ site.footer-links.googleplus }}" />
+    <meta name="designer" content="Videos Manguis">
 	<meta name="google-site-verification" content="Fo93HRW1pYCpTH0Ms73QTpXnt3PVx2k_2DnPa4YJiNk" />
 	
 	<!-- Metadata: GeoTags -->
