--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es-ES">
   <head>
+    <meta name="encoding" charset="utf-8" />
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    
     {% include meta.html %}
 
     <!--[if lt IE 9]>
