--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@
   <head>
     <meta name="encoding" charset="utf-8" />
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+	<link rel="canonical" href="http://videosmanguis.net/"/>
+	
     {% include meta.html %}
 
     <!--[if lt IE 9]>
@@ -72,7 +74,6 @@
   	</script>{% endif %}
 
 {% if page.home %}
-
   	<script type="application/ld+json">
 { "@context": "http://schema.org", 
  "@type": "Blog",
@@ -97,9 +98,6 @@
  }
 </script>
 {% endif %}
-
-
-
     {% include analytics.html %}
   </body>
 </html>
