--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,7 +3,9 @@
   <head>
     <meta name="encoding" charset="utf-8" />
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-    
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+	<link rel="canonical" href="http://videosmanguis.net/nosotras"/>
+	
     {% include meta.html %}
 
     <!--[if lt IE 9]>
