--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,10 +112,8 @@
     "http://img.youtube.com/vi/{{ page.img }}/01.jpg"
    ],
   "uploadDate": "{{ page.date }}",
-  "duration": "player.getDuration()",
-  "contentUrl": "{{ site.baseurl }}{{ page.url }}",
-  "embedUrl": "{{ site.baseurl }}{{ page.url }}",
-  "interactionCount": "2347"
+  "contentUrl": "http://videosmanguis.net/{{ page.url }}",
+  "embedUrl": "https://www.youtube.com/embed/{{ page.img }}",
 }
 	</script>
 {% endif %}
