--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,7 +113,7 @@
    ],
   "uploadDate": "{{ page.date }}",
   "contentUrl": "http://videosmanguis.net/{{ page.url }}",
-  "embedUrl": "https://www.youtube.com/embed/{{ page.img }}",
+  "embedUrl": "https://www.youtube.com/embed/{{ page.img }}"
 }
 	</script>
 {% endif %}
