--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,8 +108,8 @@
   "description": "{{ page.excerpt }}| normalize_whitespace | strip_html",
   "thumbnailUrl": [
     "https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg",
-    "http://img.youtube.com/vi/{{ page.img }}/mqdefault.jpg",
-    "http://img.youtube.com/vi/{{ page.img }}/01.jpg"
+    "http://img.youtube.com/vi/{{ page.img }}/hqdefault.jpg",
+    "http://img.youtube.com/vi/{{ page.img }}/mqdefault.jpg"
    ],
   "uploadDate": "{{ page.date }}",
   "contentUrl": "http://videosmanguis.net/{{ page.url }}",
