--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,7 +112,7 @@
     "http://img.youtube.com/vi/{{ page.img }}/mqdefault.jpg"
    ],
   "uploadDate": "{{ page.date }}",
-  "contentUrl": "http://videosmanguis.net/{{ page.url }}",
+  "contentUrl": "http://videosmanguis.net{{ page.url }}",
   "embedUrl": "https://www.youtube.com/embed/{{ page.img }}"
 }
 	</script>
