--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ posting: true
     <main id="page-main" class="post-dark">
 		<div>
 			<article id="post-video" class="post">
-				<div id="entry" class="anm-fadeIn delay-1500">
+				<div id="entry" class="anm-fadeIn delay-1500" itemscope itemtype="http://schema.org/Movie">
 					<div>
 						<figure>
 							<div>
