--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -11,12 +11,6 @@
     <meta name="designer" content="Videos Manguis">
 	<meta name="google-site-verification" content="Fo93HRW1pYCpTH0Ms73QTpXnt3PVx2k_2DnPa4YJiNk" />
 	
-	<meta itemprop="name" content="Cover Page"/>
-	<meta itemprop="url" content="http://videosmanguis.net"/>
-	<meta itemprop="thumbnailUrl" content="{{ site.baseurl }}/hipertextos/brand/cover.png"/>
-	<link rel="image_src" href="{{ site.baseurl }}/hipertextos/brand/cover.png" />
-	<meta itemprop="image" content="{{ site.baseurl }}/hipertextos/brand/cover.png"/>
-
 	<!-- Metadata: GeoTags -->
 	<meta name="geo.region" content="Catalunya" />
 	<meta name="geo.placename" content="Barcelona" />
@@ -53,6 +47,12 @@
 	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %}" />
 	<meta property="fb:admins" content="Videos-Manguis-232512496769704 " />
     {% else %}
+	<meta itemprop="name" content="Cover Page"/>
+	<meta itemprop="url" content="http://videosmanguis.net"/>
+	<meta itemprop="thumbnailUrl" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
+	<link rel="image_src" href="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
+	<meta itemprop="image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
+
     <meta itemprop="name" content="{{ page.title }} {{ site.name }}">
     <meta name="description" content="{{ site.description }} Programa semanal en Youtube, normalmente en directo aunque también hacemos montajes y videos divertidos con post-producción" />
     <meta itemprop="description" content="Los YouTubers que estás buscando. {{ site.description }} | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney">
@@ -71,7 +71,7 @@
 	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content="{{ site.url }}{{ page.url }}">
-	<meta property="og:image" content=" {{ site.baseurl }}/hipertextos/brand/cover.png" />
+	<meta property="og:image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
 	<meta property="og:site_name" content="http://www.videosmanguis.net/" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
