--- a/hipertextos/styles/adding.css
+++ b/hipertextos/styles/adding.css
@@ -5,8 +5,8 @@ footer, #follows, #follows-big, #icons, #covers, .nav-scroll, #web-credits, #pag
 text-align: center;}
 /* Nav */
 #site-nav {background: var(--color-soft-black) !important;border-bottom: none;font-size: 17px;color: var(--color-grey);}
-#site-nav a b {font-family:'Mouse Memoirs', sans-serif;font-size: 25px;font-weight: lighter ;letter-spacing: 0.069em;}
-#site-nav a {color:var(--color-grey)!important;font-weight: lighter;border: none;}
+#site-nav a b {font-family:'Mouse Memoirs', sans-serif;font-size: 26px;font-weight: lighter ;letter-spacing: 0.032em;}
+#site-nav a {color:var(--color-grey)!important;font-weight: bold ;border: none;}
 #site-nav a:visited { color: var(--color-grey);text-decoration: none;}
 #site-nav a:hover, #site-nav a b:hover { color: var(--color-white);text-decoration: none;}
 #site-nav label {color:var(--color-grey);border:thin solid transparent;}
@@ -17,6 +17,7 @@ text-align: center;}
 #site-nav form {margin-right:50px;}
 #site-nav form input  {border:thin solid var(--color-hardgrey);background:transparent!important;font-weight: lighter ;letter-spacing: 0.05em;}
 #site-nav form input:focus  {background:var(--color-softgrey)  !important;letter-spacing: 0.025em;}
+#site-nav img {width:46px;height:46px;}
 .cover h2 { letter-spacing: 0.001em;font-weight: normal; }
 #coffee h2 {margin:0;}
 .sticky-none#site-nav {position:relative!important;z-index:4!important;}
@@ -112,6 +113,15 @@ img.dialog-svg {width:70px;height:70px;border-radius:21%;}
 .listed article { border:none;overflow: hidden;width: 100%;display: block;display: inline-block;margin:0!important;padding:0!important;-webkit-column-break-inside: avoid;-moz-column-break-inside:avoid;-moz-page-break-inside:avoid;page-break-inside: avoid;}
 em small #go-up { background:rgba(0,0,0,.1);padding:15px;border-radius:50%; }
 em small #go-up:hover {background:rgba(0,0,0,.3); }
+
+/* SEARCH */
+.buscar#page-header {background-image: url("/img/texture/h_seamless.png");background-size:400px 400px;background-repeat: repeat;image-rendering: crisp-edges;border:none!important;box-shadow:inset 0 0 6px rgba(0,0,0,.12);}
+.buscar#page-header h1 {font-family:'Mouse Memoirs', sans-serif;font-weight: lighter ;}
+.buscar form input  {border:2px solid var(--color-softgrey);background:var(--color-white)!important;font-size:25px;height:46px;border-radius:32px;padding:0 23px 0 23px;}
+.buscar form input:focus  {background:var(--color-white)  !important;letter-spacing: 0.025em;box-shadow:none;border-color:var(--color-grey);}
+.buscar form input ~ input[type=submit] {display: inline-block;color: var(--color-grey);transform: rotate(40deg);width:45px;height:45px;padding:0 0 3px 6px;font-size:30px;}
+.buscar form input ~ input[type=submit]:hover {color:var(--color-grey) ;background-color:var(--color-white)!important;border-color:var(--color-grey);}
+
 /* Footer */ 
 #page-footer {background:#222;color:#999;box-shadow: inset 0 0 32px rgba(0, 0, 0, .32);bottom: 0px;width: 100%;}
 #page-footer em small a {border: thin solid #222;}
@@ -180,13 +190,21 @@ main { padding-top:1px;margin-bottom: 0;}
     #icons a {width:15%;padding:12px;border-radius:2px;}
     #page-footer h3 a {font-size: 30px;line-height:1.5;letter-spacing: 0.10em;}
 	#page-footer h3 a:hover {font-size: 36px;line-height:1.0;letter-spacing: 0.16em;}
+    #layout-result h3 {font-size: 23px;}
+    #layout-result strong {display:none;visibility: hidden;}
+    #layout-result p {font-size: 0.75em;letter-spacing: 0.06em!important;min-width:90%;}
+    #layout-result nav a {display:none;}
+	img#cover-logo {width:160px!important;height:auto;}
 }
 
 @media (max-width: 432px) {
-    .cover#page-header h1 {font-size:52px;line-height:1.4em;}
-    .cover#page-header h2 {font-size:40px;line-height:.25;}
+    .cover#page-header h1 {font-size:45px;line-height:1.0em;letter-spacing: .02em}
+    .cover#page-header h2 {font-size:18px;line-height:.15;}
     #page-footer #sitemap strong em a {font-size:16px;padding:12px 0 12px 0;letter-spacing: 0.069em;width:50%;}
 	#icons a {width:18%;padding:8px;}
     #page-footer h3 a {font-size: 23px;line-height:1.5;letter-spacing: 0.15em;}
 	#page-footer h3 a:hover {font-size: 28px;line-height:1.0;letter-spacing: 0.16em;}
+    #layout-result h3 {font-size: 15px;}
+    #layout-result p {font-size: 0.60em;letter-spacing: 0.01em!important;min-width:100%;}
+    .nav-scroll {display:none;}
 }			
