--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -6,7 +6,7 @@
 	<link rel="canonical" href="http://videosmanguis.net/"/>		
 		
 	<meta name="distribution" content="global"/>
-	<meta name="keywords" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
+	<meta name="keywords" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	<meta name="description" content="Los YouTubers que estás buscando. {{ site.description }} | Programa semanal en Youtube, normalmente en directo aunque también hacemos montajes y videos divertidos con post-producción | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
 	<meta name="robots" content="index, follow" />
     <meta name="author" href="https://plus.google.com/{{ site.footer-links.googleplus }}" />
@@ -27,7 +27,7 @@
 		
 	<meta name="distribution" content="global"/>
     {% if page.excerpt %}	
-	<meta name="keywords" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
+	<meta name="keywords" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	{% else %}
 	<meta name="keywords" content="{{ site.tag }}" />
     {% endif %}
