--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -68,7 +68,7 @@
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
     {% if page.excerpt %}	
-	<meta property="article:tag" content="{% for tag in page.tags %} {{ tag }}, {% endfor %} humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
+	<meta property="article:tag" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	{% else %}
 	<meta property="article:tag" content="{{ site.tags }}" />
     {% endif %}
