--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -104,6 +104,6 @@
 	<meta property="og:site_name" content="http://videosmanguis.net" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
-	<meta property="article:tag" content="{{ site.tags }}" />
+	<meta property="article:tag" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	<meta property="fb:admins" content="Videos-Manguis-232512496769704" />
     {% endif %}
