--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -70,7 +70,7 @@
     {% if page.excerpt %}	
 	<meta property="article:tag" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	{% else %}
-	<meta property="article:tag" content="{{ site.tags }}" />
+	<meta property="article:tag" content="{{ page.tags }}" />
     {% endif %}
 	<meta property="fb:admins" content="Videos-Manguis-232512496769704" />
 	{% else %}
