--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -39,9 +39,9 @@
     {% if page.excerpt %}	
 	<meta itemprop="name" content="{{ page.title }} {{ site.name }}"/>
 	<meta itemprop="url" content="http://videosmanguis.net"/>
-	<meta itemprop="thumbnailUrl" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg"/>
-	<link rel="image_src" href="http://img.youtube.com/vi/{{ page.img }}/default.jpg" />
-	<meta itemprop="image" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg"/>
+	<meta itemprop="thumbnailUrl" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg"/>
+	<link rel="image_src" href="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" />
+	<meta itemprop="image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg"/>
 
 	<meta property="og:type" content="website"/>			
 
@@ -49,7 +49,7 @@
     <meta name="description" content="{{ site.description }}" />
     <meta itemprop="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ page.description | default: site.description}}" />
-    <meta itemprop="image" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg">
+    <meta itemprop="image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
@@ -58,12 +58,12 @@
 	<meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
-	<meta name="twitter:image:src" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg">
+	<meta name="twitter:image:src" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content="http://videosmanguis.net">
-	<meta property="og:image" content="http://img.youtube.com/vi/{{ page.img }}/default.jpg" />
+	<meta property="og:image" content="https://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" />
 	<meta property="og:site_name" content="http://videosmanguis.net" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
