--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -76,9 +76,9 @@
 	{% else %}
 	<meta itemprop="name" content="Cover Page"/>
 	<meta itemprop="url" content="http://videosmanguis.net"/>
-	<meta itemprop="thumbnailUrl" content="http://videosmanguis.net/img/branding.jpg"/>
-	<link rel="image_src" href="http://videosmanguis.net/img/branding.jpg" />
-	<meta itemprop="image" content="http://videosmanguis.net/img/branding.jpg"/>
+	<meta itemprop="thumbnailUrl" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
+	<link rel="image_src" href="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
+	<meta itemprop="image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
 
 	<meta property="og:type" content="website"/>			
 
@@ -86,7 +86,7 @@
     <meta name="description" content="{{ site.description }}" />
     <meta itemprop="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ page.description | default: site.description}}" />
-    <meta itemprop="image" content="http://videosmanguis.net/img/branding.jpg">
+    <meta itemprop="image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
@@ -95,12 +95,12 @@
 	<meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
-	<meta name="twitter:image:src" content="http://videosmanguis.net/img/branding.jpg">
+	<meta name="twitter:image:src" content="http://videosmanguis.net/hipertextos/brand/cover.jpg">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content="http://videosmanguis.net">
-	<meta property="og:image" content="http://videosmanguis.net/img/branding.jpg" />
+	<meta property="og:image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
 	<meta property="og:site_name" content="http://videosmanguis.net" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
