--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -73,6 +73,7 @@
 	<meta property="article:tag" content="{{ page.tags }}" />
     {% endif %}
 	<meta property="fb:admins" content="Videos-Manguis-232512496769704" />
+	<meta property="fb:app_id" content="Videos-Manguis-232512496769704" />
 	{% else %}
 	<meta itemprop="name" content="Cover Page"/>
 	<meta itemprop="url" content="http://videosmanguis.net"/>
@@ -106,4 +107,5 @@
 	<meta property="article:modified_time" content="{{ page.date }}" />
 	<meta property="article:tag" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	<meta property="fb:admins" content="Videos-Manguis-232512496769704" />
+	<meta property="fb:app_id" content="Videos-Manguis-232512496769704" />
     {% endif %}
