--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -77,9 +77,9 @@
 	{% else %}
 	<meta itemprop="name" content="Cover Page"/>
 	<meta itemprop="url" content="http://videosmanguis.net"/>
-	<meta itemprop="thumbnailUrl" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
-	<link rel="image_src" href="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
-	<meta itemprop="image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
+	<meta itemprop="thumbnailUrl" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
+	<link rel="image_src" href="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg http://videosmanguis.net/hipertextos/brand/cover.jpg" />
+	<meta itemprop="image" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
 
 	<meta property="og:type" content="website"/>			
 
@@ -87,7 +87,7 @@
     <meta name="description" content="{{ site.description }}" />
     <meta itemprop="description" content="{{ site.description }}">
     <meta property="og:description" content="{{ page.description | default: site.description}}" />
-    <meta itemprop="image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg">
+    <meta itemprop="image" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg http://videosmanguis.net/hipertextos/brand/cover.jpg">
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@{{ site.footer-links.twitter }}">
