--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,13 +3,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
-	<link rel="canonical" href="http://videosmanguis.net/"/>		
+	<link rel="canonical" href="https://videosmanguis.net/"/>		
 		
 	<meta name="distribution" content="global"/>
 	<meta name="keywords" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
 	<meta name="description" content="Los YouTubers que estás buscando. {{ site.description }} | Programa semanal en Youtube, normalmente en directo aunque también hacemos montajes y videos divertidos con post-producción | Star Wars, DC Comics, Marvel, Rick and Morty, Stranger Things, Juego de Tronos, Disney" />
 	<meta name="robots" content="index, follow" />
-    <meta name="author" href="http://isardmiralles.com" />
+    <meta name="author" href="https://isardmiralles.com" />
     <meta name="designer" content="Videos Manguis">
 	<meta name="google-site-verification" content="Fo93HRW1pYCpTH0Ms73QTpXnt3PVx2k_2DnPa4YJiNk" />
 	
@@ -33,12 +33,12 @@
     {% endif %}
 	<meta name="description" content="{{ site.description }}" />
 	<meta name="robots" content="index, follow" />
-    <meta name="author" href="http://videosmanguis.net" />
-    <meta name="designer" content="Isard Miralles">
+    <meta name="author" href="https://videosmanguis.net" />
+    <meta name="designer" content="Videos Manguis">
 
     {% if page.excerpt %}	
 	<meta itemprop="name" content="{{ page.title }} {{ site.name }}"/>
-	<meta itemprop="url" content="http://videosmanguis.net"/>
+	<meta itemprop="url" content="https://videosmanguis.net"/>
 	<meta itemprop="thumbnailUrl" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg"/>
 	<link rel="image_src" href="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" />
 	<meta itemprop="image" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg"/>
@@ -62,9 +62,9 @@
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
-	<meta property="og:url" content="http://videosmanguis.net">
+	<meta property="og:url" content="https://videosmanguis.net">
 	<meta property="og:image" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg" />
-	<meta property="og:site_name" content="http://videosmanguis.net" />
+	<meta property="og:site_name" content="https://videosmanguis.net" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
     {% if page.excerpt %}	
@@ -76,7 +76,7 @@
 	<meta property="fb:app_id" content="Videos-Manguis-232512496769704" />
 	{% else %}
 	<meta itemprop="name" content="Cover Page"/>
-	<meta itemprop="url" content="http://videosmanguis.net"/>
+	<meta itemprop="url" content="https://videosmanguis.net"/>
 	<meta itemprop="thumbnailUrl" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
 	<link rel="image_src" href="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg http://videosmanguis.net/hipertextos/brand/cover.jpg" />
 	<meta itemprop="image" content="http://i1.ytimg.com/vi/{{ page.img }}/maxresdefault.jpg http://videosmanguis.net/hipertextos/brand/cover.jpg"/>
@@ -96,13 +96,13 @@
 	<meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
 	<meta name="twitter:creator" content="@{{ site.footer-links.twitter }}">
 	<!-- Twitter summary card with large image. Al menos estas medidas 280x150px -->
-	<meta name="twitter:image:src" content="http://videosmanguis.net/hipertextos/brand/cover.jpg">
+	<meta name="twitter:image:src" content="https://videosmanguis.net/hipertextos/brand/cover.jpg">
 	<!-- Open Graph data -->
 	<meta property="og:title" content="{{ site.name }}" />
 	<meta property="og:type" content="article" />
-	<meta property="og:url" content="http://videosmanguis.net">
-	<meta property="og:image" content="http://videosmanguis.net/hipertextos/brand/cover.jpg" />
-	<meta property="og:site_name" content="http://videosmanguis.net" />
+	<meta property="og:url" content="https://videosmanguis.net">
+	<meta property="og:image" content="https://videosmanguis.net/hipertextos/brand/cover.jpg" />
+	<meta property="og:site_name" content="https://videosmanguis.net" />
 	<meta property="article:published_time" content="{{ site.date }}" />
 	<meta property="article:modified_time" content="{{ page.date }}" />
 	<meta property="article:tag" content="humor, videos divertidos, notícias, series, cine, películas, review, youtuber" />
